# src/router/routes.ts
@@ -17,7 +17,7 @@ import * as express from 'express';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
-    "UserOutputData": {
+    "UserDTO": {
         "dataType": "refObject",
         "properties": {
             "id": { "dataType": "string", "required": true },
@@ -37,7 +37,7 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "TaskResponseData": {
+    "TaskDTO": {
         "dataType": "refObject",
         "properties": {
             "title": { "dataType": "string", "required": true },
@@ -83,7 +83,7 @@ const models: TsoaRoute.Models = {
         "additionalProperties": false,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "BoardResponseData": {
+    "BoardDTO": {
         "dataType": "refObject",
         "properties": {
             "title": { "dataType": "string", "required": true },
